# mimanager

./: Cargo.toml  ul
assets/: billed_hours.json  config.json
docs/: features.md  outline.md  rewrite.md
mimangerconf/: billed_hours.json  config.json
src/: api_interface.rs  command_interface.rs  config.rs  invoice.rs  main.rs  setup.rs  spreadsheet.rs
